Added environment endpoint
